# session-manager

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEBASE_OVERVIEW.md  Cargo.toml  README.md  ROADMAP.md  attach-session  config.yaml.example  pyproject.toml  requirements.txt  run.sh  setup.sh
.claude/: settings.json
android-app/: .gitignore  README.md  build.gradle.kts  local.defaults.properties.example  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
config/: client.yaml.example  email_send.yaml.example
crates/sm-server/: Cargo.toml
crates/sm-server/src/: app_artifacts.rs  bug_reports.rs  cloudflare_access.rs  codex_activity.rs  codex_events.rs  codex_requests.rs  config.rs  email.rs  google_auth.rs  http.rs  lib.rs  main.rs  mobile_analytics.rs  mobile_devices.rs  queue.rs  runtime.rs  sessions.rs  studio_ssh.rs  tool_usage.rs
crates/sm-server/tests/: read_only_http.rs
docs/product/: email_worker_examples.md  lessons.md  maintainer_bootstrap.md
docs/specs/: 135_telegram_topic_autosync.md  167_sm_clear_stale_stop_notification.md  168_sm_wait_codex_idle.md  172_crash_recovery_claudecode_env.md  249_suppress_remind_during_compaction.md  256_directional_notify_on_stop.md  261_timestamp_relative_times.md  263_skip_fence_structural_fix.md  269_task_complete_registration.md  271_telegram_thread_cleanup.md  fix_telegram_topic_duplication.md  multi-agent-coordination.md  sm-new-and-attach.md  sm_cli_spec.md  tool-usage-logging.md
docs/working/: 174_stale_stop_notification.md  178_sm_send_regressions.md  180_sm_wait_false_timeout.md  182_stop_hook_suppression.md  183_sm_send_non_urgent_escape.md  184_telegram_notification_delay.md  185_codex_spawn_bypass.md  186_agent_test_timeout.md  285_sm_watch.md  (+25 more)
hooks/: log_tool_use.sh  log_tool_use.sh.bak  notify_server.sh
scripts/: cleanup_duplicate_topics.py  cleanup_orphan_forum_topics_mtproto.py  com.claude.session-manager.plist  deploy_android_app.sh  install-service.sh  install_context_hooks.sh  install_notify_server_hook.sh  rust-mvp-smoke.sh  rust-service-cutover.sh  session-manager-wrapper.sh  setup_studio_ssh.sh  test_clear_completed.py
specs/: 137_native_codex_review.md  137_spec.md  240_sm_wait_spurious_fires.md  318_codex_fork_lifecycle_reducer_integration.md  324_codex_fork_artifact_distribution_pinning_rollback.md  325_codex_launch_gates_hardening_migration.md  327_codex_fork_detached_runtime_reattach.md  328_codex_fork_bootstrap.md  375_registry_identity_precedence.md  414_android_parity_without_telegram.md  538_app_bug_reporting_with_sqlite_spool.md  546_codex_fork_release_sync_mechanism.md  570_sm_remind_non_destructive_overdue_interrupts.md  587_restore_startup_telegram_deferral.md  618_codex_review_request_watch.md  670_managed_heavy_task_queue.md  670_managed_queue_runner.md  680_rate_limited_ci_queue_runs.md  683_interactive_restore_browser.md  690_tmux_native_scrollback.md  690_tmux_scrollback_and_transcript_history.md  703_secure_mobile_https_attach.md  705_codex_assistant_telegram_relay.md  706_turn_bound_telegram_response_relay.md  707_human_recipient_lookup_and_telegram.md  744_session_forking.md  752_remote_managed_nodes.md  754_remote_codex_fork_transport.md  762_rust_migration_and_ruggedization.md  900_studio_ssh_toggle.md  945_cloudflare_access_auth_model.md  fix_crash_recovery_running_guard.md  multi-agent-coordination.md  sm-send-v2.md  tool-usage-logging.md
src/: bug_report_store.py  child_monitor.py  codex_activity_projection.py  codex_app_server.py  codex_event_store.py  codex_fork_remote.py  codex_observability_logger.py  codex_provider_policy.py  codex_request_ledger.py  email_handler.py  github_reviews.py  human_recipients.py  infra_supervisor.py  lock_manager.py  main.py  message_queue.py  mobile_analytics.py  models.py  node_agent.py  node_runner.py  notifier.py  output_monitor.py  queue_runner.py  response_relay.py  review_parser.py  rust_shadow.py  server.py  session_manager.py  telegram_bot.py  tmux_controller.py  tool_logger.py
tests/: __init__.py  conftest.py  test_fixtures.py
(+270 files in other folders)
