[workspace]
members = ["crates/sm-server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
clap = "4.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
time = "0.3"
tokio = "1.48"
tower = "0.5"
