[workspace]
members = ["crates/sm-server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
rust-version = "1.86"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = "4.5"
hmac = "0.12"
futures-util = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
time = "0.3"
tokio = "1.48"
tower = "0.5"
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
