[package]
name = "sm-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["multipart", "ws"] }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures-util = { workspace = true }
hmac = { workspace = true }
p256 = { workspace = true, features = ["ecdsa", "pem"] }
rand_core = { workspace = true, features = ["getrandom"] }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true, features = ["formatting", "local-offset", "macros", "parsing"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
ureq = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
